# mwsat-solver-cooling

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  readme.md
old/: WSatSolver.cpp
src/: CMakeLists.txt  main.cpp
src/cooling/: CMakeLists.txt  Cooling.cpp  Cooling.h  cooling.h
src/debug/: CMakeLists.txt  debug.h
src/dimacs/: CMakeLists.txt  dimacsParsing.cpp
src/rng/: CMakeLists.txt  README.md  Rng.cpp  Rng.h
src/sat/: CMakeLists.txt  EvaluatedWSatConfig.cpp  EvaluatedWSatConfig.h  MaxWSatInstance.cpp  MaxWSatInstance.h  MaxWSatSolver.cpp  MaxWSatSolver.h  Sat.h  SatConfig.cpp  SatConfig.h  SatCooling.cpp  SatCooling.h  SatCriteria.cpp  SatCriteria.h  WSatInstance.cpp  WSatInstance.h  WSatSolver.cpp  WSatSolver.h  dimacsParser.cpp  dimacsParser.h  dimacsParsing.cpp  dimacsParsing.h  sat.h  sat.puml  sat_new.puml
src/satCooling/: CMakeLists.txt  SatCooling.cpp  SatCooling.h  satCooling.cpp  satCooling.h
test/: CMakeLists.txt
test/cooling/: CMakeLists.txt  cooling_test.cpp
test/sat/: CMakeLists.txt  MaxWSatInstance.cpp  MaxWSatSolverTest.cpp  SatCoolingTest.cpp  SatInstanceTest.cpp  WSatSolverTest.cpp  dimacsParsingTest.cpp  sat_test.cpp
